<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/warna"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ImageView
        android:id="@+id/hidangan_foto"
        android:layout_width="139dp"
        android:layout_height="124dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.113"
        app:srcCompat="@android:drawable/ic_menu_gallery" />

    <Button
        android:id="@+id/ambil_foto"
        android:layout_width="200sp"
        android:layout_height="wrap_content"
        android:text="@string/camera"
        android:background="@drawable/bg_btn"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/hidangan_foto"
        app:layout_constraintVertical_bias="0.025" />

    <Button
        android:id="@+id/load_foto"
        android:layout_width="100sp"
        android:layout_height="wrap_content"
        android:text="@string/load_foto"
        android:background="@drawable/bg_btn"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ambil_foto"
        app:layout_constraintVertical_bias="0.025" />

    <LinearLayout
        android:id="@+id/ll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@id/submit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/load_foto">

        <EditText
            android:id="@+id/edt_nama"
            android:layout_width="300sp"
            android:layout_height="wrap_content"
            android:layout_marginVertical="20dp"
            android:background="@drawable/bg_et"
            android:hint="@string/nama"
            android:inputType="textPersonName"
            android:paddingHorizontal="6dp"
            android:textColor="@color/colorPrimaryDark"
            android:textColorHint="@color/colorPrimaryDark" />

        <EditText
            android:id="@+id/edt_saus"
            android:layout_width="300sp"
            android:layout_height="wrap_content"
            android:layout_marginVertical="20dp"
            android:background="@drawable/bg_et"
            android:hint="@string/saus"
            android:inputType="textMultiLine"
            android:paddingHorizontal="6dp"
            android:textColor="@color/colorPrimaryDark"
            android:textColorHint="@color/colorPrimaryDark" />

        <EditText
            android:id="@+id/edt_minuman"
            android:layout_width="300sp"
            android:layout_height="wrap_content"
            android:layout_marginVertical="20dp"
            android:background="@drawable/bg_et"
            android:ems="10"
            android:hint="@string/minuman"
            android:inputType="textMultiLine"
            android:paddingHorizontal="6dp"
            android:textColor="@color/colorPrimaryDark"
            android:textColorHint="@color/colorPrimaryDark" />
    </LinearLayout>

    <Button
        android:id="@+id/submit"
        android:layout_width="175sp"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_btn"
        android:text="@string/submit"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ll" />



</androidx.constraintlayout.widget.ConstraintLayout>