<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/warna"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/tulisan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/isi"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.076" />


    <EditText
        android:id="@+id/edt_komentar"
        android:layout_width="300sp"
        android:layout_height="wrap_content"
        android:layout_marginTop="220dp"
        android:background="@drawable/bg_et"
        android:ems="10"
        android:hint="@string/komentar"
        android:inputType="textMultiLine"
        android:textColor="@color/colorPrimaryDark"
        android:textColorHint="@color/colorPrimaryDark"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tulisan" />

    <Button
        android:id="@+id/submit_komen"
        android:layout_width="100sp"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_btn"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edt_komentar"
        android:text="@string/submit" />



</androidx.constraintlayout.widget.ConstraintLayout>